--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -8,16 +8,60 @@
     color: $common-text-color;
     height: 40px;
     position: relative;
+
     .btn-logout {
         color: $common-text-color;
         line-height: 40px;
         height: 40px;
         padding: 0 10px;
+
         &:hover {
             background-color: darken($colormain, 5);
         }
+
         i {
             font-size: $base-size + 1px;
         }
+
     }
+
+    .languages {
+
+        .welcome {
+            margin-right: 10px;
+        }
+
+        .language-en {
+            margin-right: 15px;
+            margin-left: 10px;
+            cursor: pointer;
+            opacity: 0.2;
+
+            &.active {
+                opacity: 1;
+                color: greenyellow;
+            }
+
+            &:hover {
+                opacity: 0.8;
+            }
+        }
+
+        .language-vi {
+            cursor: pointer;
+            opacity: 0.2;
+
+            &.active {
+                opacity: 1;
+                color: orange;
+            }
+
+            &:hover {
+                opacity: 0.8;
+            }
+
+        }
+
+    }
+
 }
